templates/superdesk-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: superdesk-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: client
          image: mdridi/superdesk
          resources:
            limits:
              cpu: 6
              memory: 12Gi
            requests:
              cpu: 6
              memory: 12Gi
          ports:
            - containerPort: 9000
