templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/server-snippet: |

        sub_filter 'ws://localhost:5100' 'wss://$host/ws';


        sub_filter ':5000/api' '/api';
        sub_filter ':5100/ws' '/ws';
        sub_filter ':5400/contentapi' '/contentapi';
        sub_filter_types application/javascript;
        sub_filter 'http://localhost' 'https://$host';
        sub_filter 'ws://localhost/ws' 'wss://$host/ws';
        sub_filter 'ws://0.0.0.0:5100' 'wss://$host/ws';

        location /ws {
          proxy_pass http://localhost:5100;
          proxy_http_version 1.1;
          proxy_buffering off;
          proxy_read_timeout 3600;
          proxy_set_header Upgrade $http_upgrade;
          proxy_set_header Connection "Upgrade";
        }



spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: superdesk-service-ip
              servicePort: 9000
          - path: /api/
            backend:
              serviceName: superdesk-service-ip
              servicePort: 5000
          - path: /contentapi/
            backend:
              serviceName: superdesk-service-ip
              servicePort: 5400
          - path: /ws/
            backend:
              serviceName: superdesk-service-ip
              servicePort: 5100
